--- a/bikeBros/android/app/src/main/res/values/strings.xml
+++ b/bikeBros/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">bikeBros</string>
     <string name="title_activity_main">bikeBros</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.bikebros.app</string>
+    <string name="custom_url_scheme">com.bikebros.app</string>
 </resources>
